fix style on mobile

--- a/docs/_sass/_main.scss
+++ b/docs/_sass/_main.scss
@@ -458,6 +458,25 @@ button {
                 opacity: 0.8;
             }
         }
+
+        .info {
+            padding: 12px;
+            border-radius: 8px;
+            background-color: $color-highlightBG;
+            display: flex;
+            gap: 12px;
+            align-items: center;
+        
+            img {
+                height: 16px;
+                width: 16px;
+            }
+
+            * {
+                padding: 0;
+                margin: 0;
+            }
+        }
     }
 
 }
